# akurai-idp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  akurai-deploy.toml  deploy.sh
assets/: agent.js  lang.js  theme.js  themes.css  themes.json
ops/nginx/: agent.olibuijr.com.conf  auth-agent-redirect.conf
scripts/: validate.sh
src/: config.rs  main.rs
src/db/: mod.rs  schema.rs
src/lib/: audit.rs  crypto.rs  html.rs  jwt.rs  mod.rs  password.rs  pkce.rs  totp.rs
src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  secure_headers.rs
src/routes/: account.rs  agent.rs  agent_os.css  agent_view.rs  auth_pages.rs  authorize.rs  introspect.rs  mod.rs  revoke.rs  token.rs  userinfo.rs  well_known.rs
src/routes/admin/: audit.rs  clients.rs  groups.rs  mod.rs  tenants.rs  users.rs
